# somda_project

./: .gitignore  README.md  analysis.ipynb  data_retrieval.py  exploration.ipynb  pyproject.toml  retrieve_election_results.py  retrieve_wiki_stats.py  test_page_titles.ipynb
data/: eu_elections.json  merged_election_pages.csv
report/: main.bib  main.tex  themeKonstanz.sty  themeKonstanzStyleAddOn.sty
report/inc/: 02_motivation.tex  03_background.tex  04_data.tex  05_methods.tex  06_results.tex  07_discussion.tex
somda-project/: data_retrieval.py
somda_project/: IO_handlers.py  converting.py  data.py  helpers.py  io_managers.py  pipelines.py  processing.py  s3_funcs.py  sql_queries.py
somda_project/csv/: turnout-country.csv
tests/: test_IO_handlers.py  test_converting.py  test_election_data_retrieval.py  test_helpers.py  test_processing.py  test_s3.py  test_sql_queries.py  test_various.py
tests/data/: foo.txt
tests/data/election_data/: election_data.json
